# xmatch

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: cross_match.md  example.py  gc.md  nn.md
notebooks/Comparison_of_GC-MLE_xmatch_methods/: comparison_xmatch_gc-mle_sds_cs82.ipynb
notebooks/Filtering_duplicates/: SDSstripe82_filtering-CLEAN.ipynb  SDSstripe82_filtering-Check-NN-Distances.ipynb  prototype_xmatch_filter_duplicates.ipynb  xmatch_gc_remove_dups_swift_all_s82.ipynb
notebooks/Xmatch_sds82_x_cs82_and_plot_fluxes/: xmatch_sds82_x_CS82_-_plot_fluxes.ipynb
xmatch/: __init__.py  _gc.py  _nn.py  _utils.py  _xmatchi.py  fit.py  mle.py
