[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "xmatch"
version = "0.1.0"
description = "Cross-matching tool for astronomical (spatial) catalogs"
license = { file = "LICENSE" }
readme = "README.md"
homepage = "http://github.com/chbrandt/xmatch"
repository = "http://github.com/chbrandt/xmatch"
documentation = "http://github.com/chbrandt/xmatch"
authors = [
  {name = "Carlos H Brandt", email= "carloshenriquebrandt@gmail.com"},
]
maintainers = [
  {name = "Carlos H Brandt", email= "carloshenriquebrandt@gmail.com"},
  {name = "Renan Alves de Oliveira", email= "fisica.renan@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "astropy>=7.0.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[tool.poetry]
packages = [
  {include = "xmatch"}
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
ruff = "^0.9.10"
pre-commit = "^4.1.0"
pylint = "^3.3.5"
pytest = "^8.3.5"


[tool.ruff.lint.isort]
known-first-party = ["xmatch"]
force-sort-within-sections = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # default configurations
    "E4", "E7", "E9"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Complex
    "C901",
    # Avoid specifying long messages outside the exception classcode
    "TRY003",
]

[tool.ruff.format]
preview = true
